--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   <meta name="author" content="ashley sagar">
   <meta name="description" content="A website containing things that I do and have made.">
   <meta name="viewport" content="width=device-width, inital-scale=1.0">
+
+
+  <style media="screen">
+    body {
+      background-color: #37E2D5;
+    }
+
+    hr {
+      background-color: #C70A80;
+      border-style: none;
+      height: 10px;
+    }
+
+    img{
+      height: 400px
+    }
+  </style>
+
 </head>
 
 <!-- ///////////////////////////////////////////////////// -->
@@ -16,35 +34,37 @@
 <!-- ///////////////////////////////////////////////////// -->
 
 <body>
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
-        <hr size="10" color="purple">
+  <hr>
+  <hr>
+  <hr>
   <table cellspacing="40">
-    <td>  <img src="images/ash_gig.png" alt="ashley profile_image" height="400" width="400"></td>
-    <td><h1>Ashley Sagar</h1>
-    <p>
-      <em> <strong>Experimental artist and musician exploring at the fringes of the
-        mainstream</strong>.
-      </em>
-       <p>I am an artist and musician experimenting in digital and analog
-          technologies and processes.
-          My research is focused on exploring composition using the act of process
-          and limited means.
-          <br>
-          I perform regularly as an improvising musician, drawing on techniques from
-          jazz, afro, indian, latin and eastern musics
-          as well as exploring diy hacking/building and self made electronic music
-          devices.
-          <br>
-          Since before beginning my formal academic education I have had a passing
-          intrest in computer code and programming, but whilst
-          never following any formal educational route I instead approached
-          programming from the angle of an artist, using the
-          smallest amount of technique to aim to produce work. This website is an
-          attempt for me to break that cycle and
-          formally follow through on a more "traditional" approach to coding and
-          programmming.
-        </p></td>
+    <td> <img src="images/ash_gig.png" alt="ashley profile_image"></td>
+    <td>
+      <h1>Ashley Sagar</h1>
+      <p>
+        <em> <strong>Experimental artist and musician exploring at the fringes of the
+            mainstream</strong>.
+        </em>
+      <p>I am an artist and musician experimenting in digital and analog
+        technologies and processes.
+        My research is focused on exploring composition using the act of process
+        and limited means.
+        <br>
+        I perform regularly as an improvising musician, drawing on techniques from
+        jazz, afro, indian, latin and eastern musics
+        as well as exploring diy hacking/building and self made electronic music
+        devices.
+        <br>
+        Since before beginning my formal academic education I have had a passing
+        intrest in computer code and programming, but whilst
+        never following any formal educational route I instead approached
+        programming from the angle of an artist, using the
+        smallest amount of technique to aim to produce work. This website is an
+        attempt for me to break that cycle and
+        formally follow through on a more "traditional" approach to coding and
+        programmming.
+      </p>
+    </td>
   </table>
   <!-- YOU NEED TO LEARN TO MAKE THE IMAGE RESAZABLE TO DEVICE SIZE -->
 
@@ -52,7 +72,7 @@
 
   <!-- ///////////////////////////////////////////////////// -->
 
-  <hr size="10" color="purple">
+  <hr>
 
   <!-- ///////////////////////////////////////////////////// -->
   <!-- //////////////////EDUCATION////////////////////////// -->
@@ -73,11 +93,11 @@
 
   <!-- ///////////////////////////////////////////////////// -->
 
-  <hr size="10" color="purple">
+  <hr>
 
   <!-- ///////////////////////////////////////////////////// -->
 
-  <hr size="10" color="purple">
+  <hr>
 
   <!-- ///////////////////////////////////////////////////// -->
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
@@ -85,14 +105,16 @@
 
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
+  <a href="performances.html">Performances</a>
 
   <a href="hobbies.html">My Hobbies</a>
-<a href="contact_form.html">Contact Me</a>
+  <a href="contact_form.html">Contact Me</a>
 
 
-  <hr size="10" color="purple">
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
+  <hr>
+  <hr>
+  <hr>
+
 
 
 </body>
