--- a/index.html
+++ b/index.html
@@ -17,13 +17,24 @@
     }
 
     hr {
-      background-color: #C70A80;
-      border-style: none;
+      background-color: none;
+      border-color: #FBCB0A;
+      border-style: dotted none none none;
+      width: 40%;
+      border-width: 20px;
       height: 10px;
+
     }
 
-    img{
-      height: 400px
+  /* img{
+      height: 400%;
+      width: 400%;
+
+    }
+    */
+
+    font{
+
     }
   </style>
 
