Updated font colours

--- a/index.html
+++ b/index.html
@@ -16,25 +16,42 @@
       background-color: #37E2D5;
     }
 
+
     hr {
       background-color: none;
       border-color: #FBCB0A;
+      opacity: 0.5;
       border-style: dotted none none none;
       width: 40%;
-      border-width: 20px;
-      height: 10px;
+      border-width: 30px;
+
 
     }
 
-  /* img{
+    /* img{
       height: 400%;
       width: 400%;
 
     }
     */
+    h1 {
+      color: #590696;
+      opacity: 0.9;
+    }
 
-    font{
+    h3 {
+      color: #590696;
+      opacity: 0.9;
+    }
 
+    p {
+      color: #590696;
+      opacity: 0.9;
+    }
+
+    a {
+      color: #590696;
+      opacity: 0.9;
     }
   </style>
 
