Updated all files with link to External CCS file

--- a/contact_form.html
+++ b/contact_form.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Contact_Form</title>
+    <link rel="stylesheet" href="css/style.css">
+
   </head>
-  <body>
-      <hr size="10" color="purple">
-        <hr size="10" color="purple">
-          <hr size="10" color="purple">
+<body>
+        <hr>
+        <hr>
+          <hr>
     <h1>Contact Form</h1>
-      <hr size="10" color="purple">
+      <hr>
     <p>Get in touch for commissions/work/prices etc.</p>
 <h3>Email</h3>
 <p>green(dot)road(dot)studios(at)gmail(dot)com</p>
 
-<hr size="10" color="purple">
-  <hr size="10" color="purple">
+<hr>
+  <hr>
 
 <form action="mailto:green.road.studios@gmail.com" method="post" enctype="text/plain">
   <label>Your Name</label>
@@ -33,8 +35,8 @@
 </form>
 
 
-<hr size="10" color="purple">
-  <hr size="10" color="purple">
+<hr>
+  <hr>
 <!-- ///////////////////////////////////////////////////// -->
 <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
@@ -43,9 +45,9 @@
 <a href="skills.html">Skills</a>
 <a href="hobbies.html">My Hobbies</a>
 
-  <hr size="10" color="purple">
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
+  <hr>
+    <hr>
+      <hr>
 
   </body>
 </html>
