--- a/hobbies.html
+++ b/hobbies.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/style.css">
+
   </head>
-  <body>
-  <hr size="10" color="purple">
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
+<body>
+    <hr>
+    <hr>
+    <hr>
     <h1>My Hobbies</h1>
-      <hr size="10" color="purple">
+      <hr>
     <ol type="i">
       <li><a href="https://www.jeffberlinmusicgroup.com/lessons/jeff-berlin-bass-mastery-a-complete-reading-course" target="_blank">Learning bass guitar</a></li>
       <li>Growing houseplants</li>
@@ -19,8 +21,8 @@
 
     </ol>
 
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
+  <hr>
+  <hr>
 
     <!-- ///////////////////////////////////////////////////// -->
     <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
@@ -30,9 +32,10 @@
     <a href="skills.html">Skills</a>
     <a href="contact_form.html">Contact Me</a>
 
-      <hr size="10" color="purple">
-        <hr size="10" color="purple">
-          <hr size="10" color="purple">
+
+      <hr>
+      <hr>
+      <hr>
 
   </body>
 </html>
