--- a/experience.html
+++ b/experience.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Experience</title>
+    <link rel="stylesheet" href="css/style.css">
 
   </head>
-  <body>
-  <hr size="10" color="purple">
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
+<body>
+    <hr>
+    <hr>
+      <hr>
     <h1>Experience</h1>
-      <hr size="10" color="purple">
+      <hr>
     <table>
       <thead>
         <tr>
@@ -62,8 +63,8 @@
       </tbody>
     </table>
 
-<hr size="10" color="purple">
-  <hr size="10" color="purple">
+<hr>
+<hr>
 
 <!-- ///////////////////////////////////////////////////// -->
 <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
@@ -74,9 +75,9 @@
 <a href="hobbies.html">My Hobbies</a>
 <a href="contact_form.html">Contact Me</a>
 
-  <hr size="10" color="purple">
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
+  <hr>
+  <hr>
+  <hr>
 
   </body>
 </html>
