--- a/index.html
+++ b/index.html
@@ -9,51 +9,9 @@
   <meta name="author" content="ashley sagar">
   <meta name="description" content="A website containing things that I do and have made.">
   <meta name="viewport" content="width=device-width, inital-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
 
 
-  <style media="screen">
-    body {
-      background-color: #37E2D5;
-    }
-
-
-    hr {
-      background-color: none;
-      border-color: #FBCB0A;
-      opacity: 0.5;
-      border-style: dotted none none none;
-      width: 40%;
-      border-width: 30px;
-
-
-    }
-
-    /* img{
-      height: 400%;
-      width: 400%;
-
-    }
-    */
-    h1 {
-      color: #590696;
-      opacity: 0.9;
-    }
-
-    h3 {
-      color: #590696;
-      opacity: 0.9;
-    }
-
-    p {
-      color: #590696;
-      opacity: 0.9;
-    }
-
-    a {
-      color: #590696;
-      opacity: 0.9;
-    }
-  </style>
 
 </head>
 
