--- a/skills.html
+++ b/skills.html
@@ -5,14 +5,15 @@
 <head>
   <meta charset="utf-8" />
   <title>Skills</title>
+  <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-
-  <hr size="10" color="purple">
+  <hr>
 <table cellspacing="20">
   <thead>
     <h1>Skills</h1>
-    <hr size="10" color="purple">
+    <hr>
   </thead>
   <tbody>
     <td>
@@ -52,7 +53,7 @@
   </tbody>
 </table>
 
-  <hr size="10" color="purple">
+  <hr>
 
   <!-- ///////////////////////////////////////////////////// -->
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
@@ -64,9 +65,9 @@
 <a href="contact_form.html">Contact Me</a>
 
 
-  <hr size="10" color="purple">
-    <hr size="10" color="purple">
-      <hr size="10" color="purple">
+  <hr>
+    <hr>
+      <hr>
 
 
 </body>
