--- a/contact_form.html
+++ b/contact_form.html
@@ -43,6 +43,7 @@
 <a href="index.html">Home</a>
 <a href="experience.html">Experience</a>
 <a href="skills.html">Skills</a>
+<a href="performances.html">Performances</a>
 <a href="hobbies.html">My Hobbies</a>
 
   <hr>
