--- a/experience.html
+++ b/experience.html
@@ -72,6 +72,8 @@
 
 <a href="index.html">Home</a>
 <a href="skills.html">Skills</a>
+<a href="performances.html">Performances</a>
+
 <a href="hobbies.html">My Hobbies</a>
 <a href="contact_form.html">Contact Me</a>
 
