--- a/performances.html
+++ b/performances.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
+  <hr>
+  <hr>
+  <hr>
   <h1>Performances</h1>
-
+<hr>
   <table cellspacing="20">
     <thead>
       <tr>
@@ -104,6 +107,18 @@
       </tr>
     </tbody>
   </table>
+
+<hr>
+<hr>
+
+  <a href="experience.html">Experience</a>
+  <a href="skills.html">Skills</a>
+  <a href="hobbies.html">My Hobbies</a>
+  <a href="contact_form.html">Contact Me</a>
+
+<hr>
+<hr>
+<hr>
 </body>
 
 </html>
