--- a/hobbies.html
+++ b/hobbies.html
@@ -30,6 +30,8 @@
     <a href="index.html">Home</a>
     <a href="experience.html">Experience</a>
     <a href="skills.html">Skills</a>
+    <a href="performances.html">Performances</a>
+
     <a href="contact_form.html">Contact Me</a>
 
 
