--- a/skills.html
+++ b/skills.html
@@ -61,6 +61,8 @@
 
 <a href="index.html">Home</a>
   <a href="experience.html">Experience</a>
+  <a href="performances.html">Performances</a>
+
   <a href="hobbies.html">My Hobbies</a>
 <a href="contact_form.html">Contact Me</a>
 
