updated style changes

--- a/experience.html
+++ b/experience.html
@@ -7,9 +7,11 @@
 
   </head>
 <body>
+
+   <img src="images/ash2_gig.png" alt="ashley profile_image">
+
     <hr>
-    <hr>
-      <hr>
+
     <h1>Experience</h1>
       <hr>
     <table>
@@ -60,11 +62,19 @@
             <td><a href="http://minimism.com/ns" target="_blank"> <strong>www</strong></a> </td>
           </tr>
 
+          <tr>
+            <td>2010-2014</td>
+            <td>section_9</td>
+            <td>livecoder</td>
+            <td> <a href="https://youtu.be/lo-j22mOchw" target="_blank"><strong>www</strong> </a>
+            </td>
+          </tr>
+
       </tbody>
     </table>
 
 <hr>
-<hr>
+
 
 <!-- ///////////////////////////////////////////////////// -->
 <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
@@ -77,9 +87,7 @@
 <a href="hobbies.html">My Hobbies</a>
 <a href="contact_form.html">Contact Me</a>
 
-  <hr>
-  <hr>
-  <hr>
+
 
   </body>
 </html>
