--- a/performances.html
+++ b/performances.html
@@ -10,8 +10,7 @@
 
 <body>
   <hr>
-  <hr>
-  <hr>
+
   <h1>Performances</h1>
 <hr>
   <table cellspacing="20">
@@ -109,16 +108,17 @@
   </table>
 
 <hr>
-<hr>
+
+
+<!-- ///////////////////////////////////////////////////// -->
+<!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
   <a href="hobbies.html">My Hobbies</a>
   <a href="contact_form.html">Contact Me</a>
 
-<hr>
-<hr>
-<hr>
+
 </body>
 
 </html>
