--- a/skills.html
+++ b/skills.html
@@ -10,6 +10,10 @@
 </head>
 <body>
   <hr>
+
+
+     <img src="images/ash2_gig.png" alt="ashley profile_image">
+
 <table cellspacing="20">
   <thead>
     <h1>Skills</h1>
@@ -55,6 +59,7 @@
 
   <hr>
 
+
   <!-- ///////////////////////////////////////////////////// -->
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
@@ -67,9 +72,7 @@
 <a href="contact_form.html">Contact Me</a>
 
 
-  <hr>
-    <hr>
-      <hr>
+
 
 
 </body>
