--- a/performances.html
+++ b/performances.html
@@ -113,6 +113,7 @@
 <!-- ///////////////////////////////////////////////////// -->
 <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
+<a href="index.html">Home</a>
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
   <a href="hobbies.html">My Hobbies</a>
