CSS and formatting updates

--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
 <body>
   <hr>
 
+<img src="images/ash2_gig.png" alt="ashley profile_image">
+
+
   <table cellspacing="40">
-    <td> <img src="images/ash_gig.png" alt="ashley profile_image"></td>
     <td>
       <h1>Ashley Sagar</h1>
       <p>
         <em> <strong>Experimental artist and musician exploring at the fringes of the
             mainstream</strong>.
         </em>
-      <p>I am an artist and musician experimenting in digital and analog
+
+  <main>
+
+    <p>I am an artist and musician experimenting in digital and analog
         technologies and processes.
+        <br>
         My research is focused on exploring composition using the act of process
         and limited means.
         <br>
@@ -49,6 +55,8 @@
         formally follow through on a more "traditional" approach to coding and
         programmming.
       </p>
+
+    </main>
     </td>
   </table>
   <!-- YOU NEED TO LEARN TO MAKE THE IMAGE RESAZABLE TO DEVICE SIZE -->
