--- a/experience.html
+++ b/experience.html
@@ -14,7 +14,7 @@
 
     <h1>Experience</h1>
       <hr>
-    <table>
+    <table cellspacing="10">
       <thead>
         <tr>
           <th>When</th>
