--- a/hobbies.html
+++ b/hobbies.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>My Hobbies</title>
+    <title>Interests/Research</title>
     <link rel="stylesheet" href="css/style.css">
 
   </head>
 <body>
     <hr>
 
-    <h1>My Hobbies</h1>
+    <h1>Interests/Research</h1>
       <hr>
     <ol type="i">
       <li><a href="https://www.jeffberlinmusicgroup.com/lessons/jeff-berlin-bass-mastery-a-complete-reading-course" target="_blank">Learning bass guitar</a></li>
