--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!--BoilerPlate-->
 
-<!DOCTYPE html>
-<html>
 
-<head>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head> 
   <meta charset="utf-8">
   <title>_ashley_sagar_»</title>
   <meta name="author" content="ashley sagar">
