Updated image pos and some internal links

--- a/contact_form.html
+++ b/contact_form.html
@@ -7,8 +7,7 @@
 
   </head>
 <body>
-        <hr>
-      
+
     <h1>Contact Form</h1>
       <hr>
     <p>Get in touch for commissions/work/prices etc.</p>
@@ -43,7 +42,7 @@
 <a href="experience.html">Experience</a>
 <a href="skills.html">Skills</a>
 <a href="performances.html">Performances</a>
-<a href="hobbies.html">My Hobbies</a>
+<a href="Research.html">Interests/Research</a>
 
 
 
