--- a/experience.html
+++ b/experience.html
@@ -8,9 +8,6 @@
   </head>
 <body>
 
-   <img src="images/ash2_gig.png" alt="ashley profile_image">
-
-    <hr>
 
     <h1>Experience</h1>
       <hr>
@@ -84,7 +81,7 @@
 <a href="skills.html">Skills</a>
 <a href="performances.html">Performances</a>
 
-<a href="hobbies.html">My Hobbies</a>
+<a href="Research.html">Interests/Research</a>
 <a href="contact_form.html">Contact Me</a>
 
 
