--- a/performances.html
+++ b/performances.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-  <hr>
 
   <h1>Performances</h1>
 <hr>
@@ -116,7 +115,7 @@
 <a href="index.html">Home</a>
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="Research.html">Interests/Research</a>
   <a href="contact_form.html">Contact Me</a>
 
 
