--- a/skills.html
+++ b/skills.html
@@ -9,10 +9,6 @@
 
 </head>
 <body>
-  <hr>
-
-
-     <img src="images/ash2_gig.png" alt="ashley profile_image">
 
 <table cellspacing="20">
   <thead>
@@ -68,7 +64,7 @@
   <a href="experience.html">Experience</a>
   <a href="performances.html">Performances</a>
 
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="Research.html">Interests/Research</a>
 <a href="contact_form.html">Contact Me</a>
 
 
