--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head> 
+<head>
   <meta charset="utf-8">
   <title>_ashley_sagar_»</title>
   <meta name="author" content="ashley sagar">
   <meta name="description" content="A website containing things that I do and have made.">
-  <meta name="viewport" content="width=device-width, inital-scale=1.0">
+<!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
+-->
   <link rel="stylesheet" href="css/style.css">
 
 
@@ -21,9 +22,9 @@
 <!-- ///////////////////////////////////////////////////// -->
 
 <body>
-  <hr>
 
-<img src="images/ash2_gig.png" alt="ashley profile_image">
+  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%>
+
 
 
   <table cellspacing="40">
@@ -94,7 +95,7 @@
 
   <a href="experience.html">Experience</a>
   <a href="skills.html">Skills</a>
-  <a href="hobbies.html">My Hobbies</a>
+  <a href="Research.html">Interests/Research</a>
   <a href="contact_form.html">Contact Me</a>
 
 
