--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%>
+  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%">
 
 
 
