font changes and general aesthetic work

--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!--BoilerPlate-->
-
-
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -29,27 +26,30 @@
 
   <table cellspacing="40">
     <td>
-      <h1>Ashley Sagar</h1>
-      <p>
-        <em> <strong>Experimental artist and musician exploring at the fringes of the
-            mainstream</strong>.
-        </em>
+      <h1 class="myName">Ashley Sagar</h1>
+      <p  class="header">
+        Experimental artist and musician exploring at the fringes of the
+            mainstream. </p>
+
 
   <main>
 
-    <p>I am an artist and musician experimenting in digital and analog
-        technologies and processes.
-        <br>
-        My research is focused on exploring composition using the act of process
+    <p class="title">I am an artist and musician experimenting in digital and analog
+        technologies and processes. </p>
+
+        <p>
+        My research is focused on exploring composition using the act of process, recursion
         and limited means.
-        <br>
-        I perform regularly as an improvising musician, drawing on techniques from
+      </p>
+      <p>  I perform regularly as an improvising musician, drawing on techniques from
         jazz, afro, indian, latin and eastern musics
         as well as exploring diy hacking/building and self made electronic music
-        devices.
-        <br>
-        Since before beginning my formal academic education I have had a passing
-        intrest in computer code and programming, but whilst
+        devices.</p>
+
+        
+
+    <!--    Since before beginning my formal academic education I have had a passing
+        interest in computer code and programming, but whilst
         never following any formal educational route I instead approached
         programming from the angle of an artist, using the
         smallest amount of technique to aim to produce work. This website is an
@@ -57,6 +57,7 @@
         formally follow through on a more "traditional" approach to coding and
         programmming.
       </p>
+    -->
 
     </main>
     </td>
@@ -67,12 +68,12 @@
 
   <!-- ///////////////////////////////////////////////////// -->
 
-  <hr>
+
 
   <!-- ///////////////////////////////////////////////////// -->
   <!-- //////////////////EDUCATION////////////////////////// -->
 
-
+<!--
   <h3>Education</h3>
 
 
@@ -84,6 +85,7 @@
         <em><strong>Access to Art and Design</strong></em>.
       </p>
 
+-->
 
 
   <hr>
@@ -91,6 +93,8 @@
 
   <!-- ///////////////////////////////////////////////////// -->
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
+
+<center>
 
 
   <a href="experience.html">Experience</a>
@@ -101,6 +105,7 @@
 <br>
   <a href="contact_form.html">Contact Me</a>
 
+</center>
 
 
 
