--- a/skills.html
+++ b/skills.html
@@ -59,16 +59,19 @@
   <!-- ///////////////////////////////////////////////////// -->
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
+<center>
 
-<a href="index.html">Home</a>
-<br>
-  <a href="experience.html">Experience</a>
-<br>
-  <a href="performances.html">Performances</a>
-<br>
-  <a href="Research.html">Interests/Research</a>
-<br>
-<a href="contact_form.html">Contact Me</a>
+  <a href="index.html">Home</a>
+  <br>
+    <a href="experience.html">Experience</a>
+  <br>
+    <a href="performances.html">Performances</a>
+  <br>
+    <a href="Research.html">Interests/Research</a>
+  <br>
+  <a href="contact_form.html">Contact Me</a>  
+</center>
+
 
 
 
