--- a/contact_form.html
+++ b/contact_form.html
@@ -38,16 +38,19 @@
 <!-- ///////////////////////////////////////////////////// -->
 <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
-<a href="index.html">Home</a>
-<br>
-<a href="experience.html">Experience</a>
-<br>
-<a href="skills.html">Skills</a>
-<br>
-<a href="performances.html">Performances</a>
-<br>
-<a href="Research.html">Interests/Research</a>
+<center>
+  <a href="index.html">Home</a>
+  <br>
+  <a href="experience.html">Experience</a>
+  <br>
+  <a href="skills.html">Skills</a>
+  <br>
+  <a href="performances.html">Performances</a>
+  <br>
+  <a href="Research.html">Interests/Research</a>
 
+  
+</center>
 
 
   </body>
