--- a/performances.html
+++ b/performances.html
@@ -112,16 +112,20 @@
 <!-- ///////////////////////////////////////////////////// -->
 <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
-<a href="index.html">Home</a>
-<br>
-  <a href="experience.html">Experience</a>
-<br>
-  <a href="skills.html">Skills</a>
-<br>
-  <a href="Research.html">Interests/Research</a>
-<br>
-  <a href="contact_form.html">Contact Me</a>
+<center>
 
+  <a href="index.html">Home</a>
+  <br>
+    <a href="experience.html">Experience</a>
+  <br>
+    <a href="skills.html">Skills</a>
+  <br>
+    <a href="Research.html">Interests/Research</a>
+  <br>
+    <a href="contact_form.html">Contact Me</a>
+
+
+</center>
 
 </body>
 
