--- a/experience.html
+++ b/experience.html
@@ -11,7 +11,9 @@
 
     <h1>Experience</h1>
       <hr>
-    <table cellspacing="10">
+      <center>
+
+    <table cellspacing="20" >
       <thead>
         <tr>
           <th>When</th>
@@ -24,7 +26,7 @@
           <td>2022</td>
           <td>{Deluxe_Hugs}</td>
           <td>Composer/Bass Player</td>
-          <td> <a href="https://www.instagram.com/tv/CYpQ3yRoo1S/" target="_blank"> <strong>www</strong> </a> </td>
+          <td> <a class="www" href="https://www.instagram.com/tv/CYpQ3yRoo1S/" target="_blank"> www </a> </td>
         </tr>
         <tr>
           <td>2022</td>
@@ -35,20 +37,20 @@
           <td>2013-2018</td>
           <td>The Wharf Street Galaxy Band</td>
           <td>Composer/Bass Player</td>
-          <td> <a href="http://thewsgb.net/" target="_blank"><strong>www</strong></a></td>
+          <td> <a class="www" href="http://thewsgb.net/" target="_blank">www</a></td>
         </tr>
         <tr>
           <td>2010-Present</td>
           <td>Various guises for Wonkystuff Gigs</td>
           <td>Experimental Composer & Performer</td>
-          <td> <a href="https://wonkystuff.net/category/events/" target="_blank"><strong>www</strong></a></td>
+          <td> <a class="www"  href="https://wonkystuff.net/category/events/" target="_blank">www</a></td>
         </tr>
 
         <tr>
           <td>2013-Present</td>
           <td>Orlando Ferguson</td>
           <td>Experimental Composer</td>
-          <td> <a href="https://orlandoferguson.net/" target="_blank"> <strong>www</strong> </a> </td>
+          <td> <a class="www"  href="https://orlandoferguson.net/" target="_blank"> www </a> </td>
         </tr>
 
 
@@ -56,19 +58,20 @@
             <td>2011-Present</td>
             <td>Neuschlaufen</td>
             <td>Bass Player</td>
-            <td><a href="http://minimism.com/ns" target="_blank"> <strong>www</strong></a> </td>
+            <td><a class="www"  href="http://minimism.com/ns" target="_blank">www</a> </td>
           </tr>
 
           <tr>
             <td>2010-2014</td>
             <td>section_9</td>
             <td>livecoder</td>
-            <td> <a href="https://youtu.be/lo-j22mOchw" target="_blank"><strong>www</strong> </a>
+            <td> <a class="www"  href="https://youtu.be/lo-j22mOchw" target="_blank">www </a>
             </td>
           </tr>
 
       </tbody>
     </table>
+  </center>
 
 <hr>
 
@@ -76,17 +79,20 @@
 <!-- ///////////////////////////////////////////////////// -->
 <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
+<center>
 
-<a href="index.html">Home</a>
-<br>
-<a href="skills.html">Skills</a>
-<br>
-<a href="performances.html">Performances</a>
-<br>
-<a href="Research.html">Interests/Research</a>
-<br>
-<a href="contact_form.html">Contact Me</a>
+  <a href="index.html">Home</a>
+  <br>
+  <a href="skills.html">Skills</a>
+  <br>
+  <a href="performances.html">Performances</a>
+  <br>
+  <a href="Research.html">Interests/Research</a>
+  <br>
+  <a href="contact_form.html">Contact Me</a>
 
+  
+</center>
 
 
   </body>
