--- a/contact_form.html
+++ b/contact_form.html
@@ -16,6 +16,8 @@
 
 <hr>
 
+<center>
+
 
 <form action="mailto:green.road.studios@gmail.com" method="post" enctype="text/plain">
   <label>Your Name</label>
@@ -31,7 +33,7 @@
   <input type="submit" name="">
 
 </form>
-
+</center>
 
 <hr>
 
@@ -49,7 +51,7 @@
   <br>
   <a href="Research.html">Interests/Research</a>
 
-  
+
 </center>
 
 
