--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%">
 
 
+<center>
+
 
   <table cellspacing="40">
     <td>
@@ -46,7 +48,7 @@
         as well as exploring diy hacking/building and self made electronic music
         devices.</p>
 
-        
+
 
     <!--    Since before beginning my formal academic education I have had a passing
         interest in computer code and programming, but whilst
@@ -62,6 +64,8 @@
     </main>
     </td>
   </table>
+
+  </center>
   <!-- YOU NEED TO LEARN TO MAKE THE IMAGE RESAZABLE TO DEVICE SIZE -->
 
 
