--- a/Research.html
+++ b/Research.html
@@ -10,15 +10,20 @@
 
     <h1>Interests/Research</h1>
       <hr>
-    <ol type="i">
-      <li><a href="https://www.jeffberlinmusicgroup.com/lessons/jeff-berlin-bass-mastery-a-complete-reading-course" target="_blank">Learning bass guitar</a></li>
-      <li>Growing houseplants</li>
-      <li>Learning spanish</li>
-      <li><a href="https://ashleysagar.bandcamp.com/" target="_blank">Making music</a></li>
-      <li><a href="https://www.sungwingchun-sheffield.com/" target="_blank">Martial arts</a></li>
 
-    </ol>
+<center>
 
+
+<p> <a href="https://ashsagarblog.wordpress.com/" target="_blank">Digital Arts</a></p>
+    <p> <a href="https://www.jeffberlinmusicgroup.com/lessons/jeff-berlin-bass-mastery-a-complete-reading-course" target="_blank">Learning bass guitar</a></p>
+      <p>Growing houseplants</p>
+    <p>Learning spanish</p>
+  <p><a href="https://ashleysagar.bandcamp.com/" target="_blank">Making music</a></p>
+    <p><a href="https://www.sungwingchun-sheffield.com/" target="_blank">Martial arts</a></p>
+
+
+
+</center>
   <hr>
 
 
@@ -38,7 +43,7 @@
       <a href="performances.html">Performances</a>
   <br>
       <a href="contact_form.html">Contact Me</a>
-  
+
 </center>
 
 
