--- a/performances.html
+++ b/performances.html
@@ -12,6 +12,9 @@
 
   <h1>Performances</h1>
 <hr>
+<center>
+
+
   <table cellspacing="10">
     <thead>
       <tr>
@@ -106,6 +109,7 @@
     </tbody>
   </table>
 
+</center>
 <hr>
 
 
