--- a/skills.html
+++ b/skills.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
+<center>
+
 
 <table cellspacing="20">
   <thead>
@@ -47,7 +49,7 @@
       </tr>
 
 
-
+</center>
 
 
   </tbody>
@@ -69,7 +71,7 @@
   <br>
     <a href="Research.html">Interests/Research</a>
   <br>
-  <a href="contact_form.html">Contact Me</a>  
+  <a href="contact_form.html">Contact Me</a>
 </center>
 
 
