--- a/contact_form.html
+++ b/contact_form.html
@@ -21,14 +21,14 @@
 
 <form action="mailto:green.road.studios@gmail.com" method="post" enctype="text/plain">
   <label>Your Name</label>
-  <input type="text" name="yourName" value="">
+  <input class="name" type="text" name="yourName" value="">
   <br>
   <label>Your Email</label>
-  <input type="email" name="yourEmail" >
+  <input class="email"  type="email" name="yourEmail" >
   <br>
   <label>Your Message</label>
   <br>
-  <textarea name="yourMessage" rows="10" cols="40"></textarea>
+  <textarea class="tArea" name="yourMessage" rows="10" cols="40"></textarea>
   <br>
   <input type="submit" name="">
 
