--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
 
-  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%">
+<!--  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%"> -->
 
 
 <center>
@@ -30,46 +30,17 @@
     <td>
       <h1 class="myName">Ashley Sagar</h1>
       <p  class="header">
-        Experimental artist and musician exploring at the fringes of the
-            mainstream. </p>
-
+        Experimental artist and musician. </p>
 
   <main>
 
-    <p class="title">I am an artist and musician experimenting in digital and analog
-        technologies and processes. </p>
-
-        <p>
-        My research is focused on exploring composition using the act of process, recursion
-        and limited means.
-      </p>
-      <p>  I perform regularly as an improvising musician, drawing on techniques from
-        jazz, afro, indian, latin and eastern musics
-        as well as exploring diy hacking/building and self made electronic music
-        devices.</p>
-
-
-
-    <!--    Since before beginning my formal academic education I have had a passing
-        interest in computer code and programming, but whilst
-        never following any formal educational route I instead approached
-        programming from the angle of an artist, using the
-        smallest amount of technique to aim to produce work. This website is an
-        attempt for me to break that cycle and
-        formally follow through on a more "traditional" approach to coding and
-        programmming.
-      </p>
-    -->
-
+            
     </main>
     </td>
   </table>
 
   </center>
   <!-- YOU NEED TO LEARN TO MAKE THE IMAGE RESAZABLE TO DEVICE SIZE -->
-
-
-
   <!-- ///////////////////////////////////////////////////// -->
 
 
