--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
   <table cellspacing="40">
     <td>
       <h1 class="myName">Ashley Sagar</h1>
-      <p  class="header">
-        Experimental artist and musician. </p>
 
+      <!-- <p  class="header">
+        Experimental artist and musician. </p>
+-->
   <main>
 
             
