updating index, added work.html

--- a/index.html
+++ b/index.html
@@ -23,42 +23,26 @@
 <!--  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%"> -->
 
 
-  <table cellspacing="40">
-    <td>
       <h1 class="myName">Ashley Sagar</h1>
 
-      <!-- <p  class="header">
-        Experimental artist and musician. </p>
--->
-  <main>
 
-            
-    </main>
-    </td>
-  </table>
+
 
 
  
 
-  <hr>
+  
 
 
   
   <!-- ///////////////////////////////////////////////////// -->
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
-<center>
+
+<a href="work.html">work</a>
+<a href="contact_form.html">booking</a>
 
 
-  <a href="experience.html">Experience</a>
-  <br>
-  <a href="skills.html">Skills</a>
-  <br>
-  <a href="Research.html">Interests/Research</a>
-<br>
-  <a href="contact_form.html">Contact Me</a>
-
-</center>
 
 
 
