adding to the wrk.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!--  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%"> -->
 
 
-      <h1 class="myName">Ashley Sagar</h1>
+      <h1 class="myName">ASHLEY SAGAR</h1>
 
 
 
