--- a/work.html
+++ b/work.html
@@ -10,4 +10,19 @@
   <body>
 
     <h1>work</h1>
-    </body>
+
+
+    
+    <p>
+      <a href="https://ashleysagar.bandcamp.com/" target="_blank">Ashley Sagar Bandcamp</a>
+    </p>
+
+    <p>
+      <a href="https://orlandoferguson.bandcamp.com/" target="_blank">Orlando Ferguson Bandcamp</a>
+    </p>
+
+    
+
+
+  </body>
+  
