updating index booking and work

--- a/contact_form.html
+++ b/contact_form.html
@@ -2,57 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Contact_Form</title>
+    <title>Booking</title>
     <link rel="stylesheet" href="css/style.css">
 
   </head>
 <body>
 
-    <h1>Contact Form</h1>
-      <hr>
-    <p>Get in touch for commissions/work/prices etc.</p>
-<h3>Email</h3>
+  <h1>
+    <a href="index.html">ASHLEY SAGAR</a>
+    </h1>
+    <h2>Booking</h2>
+      
 <p>green(dot)road(dot)studios(at)gmail(dot)com</p>
 
-<hr>
-
-<center>
-
-
-<form action="mailto:green.road.studios@gmail.com" method="post" enctype="text/plain">
-  <label>Your Name</label>
-  <input class="name" type="text" name="yourName" value="">
-  <br>
-  <label>Your Email</label>
-  <input class="email"  type="email" name="yourEmail" >
-  <br>
-  <label>Your Message</label>
-  <br>
-  <textarea class="tArea" name="yourMessage" rows="10" cols="40"></textarea>
-  <br>
-  <input type="submit" name="">
-
-</form>
-</center>
-
-<hr>
-
-<!-- ///////////////////////////////////////////////////// -->
-<!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
-
-<center>
-  <a href="index.html">Home</a>
-  <br>
-  <a href="experience.html">Experience</a>
-  <br>
-  <a href="skills.html">Skills</a>
-  <br>
-  <a href="performances.html">Performances</a>
-  <br>
-  <a href="Research.html">Interests/Research</a>
-
-
-</center>
 
 
   </body>
