--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 <!--  <img src="images/ash2_gig.png" alt="ashley profile_image" width="100%"> -->
 
 
-      <h1 class="myName">ASHLEY SAGAR</h1>
+<h1>
+  <a href="index.html">ASHLEY SAGAR</a>
+</h1>
 
 
 
