--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
 
-<a href="work.html">audio</a>
+<a href="audio.html">audio</a>
 <a href="contact_form.html">booking</a>
 
 </body>
