--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <h1>
-  <a href="index.html">ASHLEY SAGAR</a>
+  <a href="index.html">Ashley Sagar</a>
 </h1>
   
   <!-- ///////////////////////////////////////////////////// -->
@@ -27,6 +27,8 @@
 
 
 <a href="audio.html">audio</a>
+<a href="visual.html">visual</a>
+
 <a href="contact_form.html">booking</a>
 
 </body>
