--- a/audio.html
+++ b/audio.html
@@ -10,8 +10,13 @@
   <body>
 
     <h1>
-      <a href="index.html">ASHLEY SAGAR</a></h1>
+      <a href="index.html">Ashley Sagar</a></h1>
 
+    <a href="visual.html">visual</a>
+    <a href="contact_form.html">booking</a>
+    
+
+    
     <h2>audio</h2>
 
     <!-- a list of links to audio I made -->
