--- a/contact_form.html
+++ b/contact_form.html
@@ -9,9 +9,14 @@
 <body>
 
   <h1>
-    <a href="index.html">ASHLEY SAGAR</a>
-    </h1>
-    <h2>Booking</h2>
+    <a href="index.html">Ashley Sagar</a>
+  </h1>
+
+  <a href="audio.html">audio</a>
+  <a href="visual.html">visual</a>
+  
+  <h2>
+    <h2>booking</h2>
       
 <p>green(dot)road(dot)studios(at)gmail(dot)com</p>
 
