added a cv and bio html

--- a/audio.html
+++ b/audio.html
@@ -13,8 +13,10 @@
       <a href="index.html">Ashley Sagar</a></h1>
 
     <a href="visual.html">visual</a>
+    <a href="cv.html">cv</a>
+    <a href="bio.html">bio</a>
     <a href="contact_form.html">booking</a>
-    
+
 
     
     <h2>audio</h2>
