--- a/contact_form.html
+++ b/contact_form.html
@@ -14,6 +14,11 @@
 
   <a href="audio.html">audio</a>
   <a href="visual.html">visual</a>
+  <a href="cv.html">cv</a>
+  <a href="bio.html">bio</a>
+
+
+
   
   <h2>
     <h2>booking</h2>
