--- a/audio.html
+++ b/audio.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>audio</title>
+    
+    <meta name="author" content="ashley sagar">
+    <meta name="description" content="A website containing things that I do and have made.">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -77,4 +80,8 @@
 
 
   </body>
-  
+
+
+
+
+ </html>
