--- a/contact_form.html
+++ b/contact_form.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Booking</title>
+    <title>booking</title>
+    <meta name="author" content="ashley sagar">
+    <meta name="description" content="A website containing things that I do and have made.">
     <link rel="stylesheet" href="css/style.css">
 
   </head>
