--- a/visual.html
+++ b/visual.html
@@ -4,6 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>visual</title>
+    <meta name="author" content="ashley sagar">
+    <meta name="description" content="A website containing things that I do and have made.">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -26,3 +28,8 @@
 
     
     </body>
+
+
+
+
+  </html>
