updated bio and contact form

--- a/contact_form.html
+++ b/contact_form.html
@@ -10,19 +10,21 @@
   </head>
 <body>
 
-  <div><h1>
+  <div class=name><h1>
     <a href="index.html">Ashley Sagar</a>
-  </h1>
+    </h1>
+  </div>
 
-    <div><a href="audio.html">audio</a></div>
-    <div><a href="visual.html">visual</a></div>
-    <div><a href="cv.html">cv</a></div>
-    <div><a href="bio.html">bio</a></div>
-
+    <section class=menu>
+    <div class=title><a href="audio.html">audio</a></div>
+    <div  class=title><a href="visual.html">visual</a></div>
+    <div class=title><a href="cv.html">cv</a></div>
+    <div class=title><a href="bio.html">bio</a></div>
+    </section>
 
 
     
-    <div><h2>booking</h2></div>
+    <div class=title><h2>booking</h2></div>
     
     <div><p>green(dot)road(dot)studios(at)gmail(dot)com</p></div>
 
