--- a/contact_form.html
+++ b/contact_form.html
@@ -16,17 +16,17 @@
   </div>
 
     <section class=menu>
-    <div class=title><a href="audio.html">audio</a></div>
-    <div  class=title><a href="visual.html">visual</a></div>
-    <div class=title><a href="cv.html">cv</a></div>
-    <div class=title><a href="bio.html">bio</a></div>
+    <div><a href="audio.html">audio</a></div>
+    <div>  <a href="visual.html">visual</a></div>
+    <div><a href="cv.html">cv</a></div>
+    <div><a href="bio.html">bio</a></div>
     </section>
 
 
     
     <div class=title><h2>booking</h2></div>
     
-    <div><p>green(dot)road(dot)studios(at)gmail(dot)com</p></div>
+    <div class=mail><p>green(dot)road(dot)studios(at)gmail(dot)com</p></div>
 
 
 
