reverted the flexbox stuff

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-  <div class=name>
+  <div>
 <h1>
   <a href="index.html">Ashley Sagar</a>
 </h1>
@@ -24,24 +24,24 @@
   <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
 
-  <section class=menu>
-<div class=title>
+  <section>
+<div>
 <a href="audio.html">audio</a>
 </div>
 
-<div class=title>
+<div>
 <a href="visual.html">visual</a>
 </div>
 
-<div class=title>
+<div>
 <a href="cv.html">cv</a>
 </div>
 
-<div class=title>
+<div>
 <a href="bio.html">bio</a>
 </div>
 
-<div class=title>
+<div>
 <a href="contact_form.html">booking</a>
 </div>
 
