--- a/index.html
+++ b/index.html
@@ -1,52 +1,47 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<head>
-  <meta charset="utf-8">
-  <title>_ashley_sagar_»</title>
-  <meta name="author" content="ashley sagar">
-  <meta name="description" content="A website containing things that I do and have made.">
-<!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
--->
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>_ashley_sagar_»</title>
+    <meta name="author" content="ashley sagar">
+    <meta name="description" content="A website containing things that I do and have made.">
+    <!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
+      -->
+    <link rel="stylesheet" href="css/style.css">
+  </head>
 
 
-<body>
+  <body>
 
 
-  <div>
-<h1>
-  <a href="index.html">Ashley Sagar</a>
-</h1>
-  </div>
-  <!-- ///////////////////////////////////////////////////// -->
-  <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
+    <header>
+    <div><h1><a href="index.html">Ashley Sagar</a></h1></div>
 
 
-  <section>
-<div>
-<a href="audio.html">audio</a>
-</div>
+    <!-- ///////////////////////////////////////////////////// -->
+    <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
-<div>
-<a href="visual.html">visual</a>
-</div>
 
-<div>
-<a href="cv.html">cv</a>
-</div>
+    <section>
+      <div><a href="audio.html">audio</a></div>
+      <div><a href="visual.html">visual</a></div>
+      <div><a href="cv.html">cv</a></div>
+      <div><a href="bio.html">bio</a></div>
+      <div><a href="contact_form.html">booking</a></div>
 
-<div>
-<a href="bio.html">bio</a>
-</div>
+    </section>
 
-<div>
-<a href="contact_form.html">booking</a>
-</div>
+    </header>
 
-</section>
+    <main>
+    </main>
 
-</body>
+    <footer>
+      <p>©2025 green.road.studios. All rights reserved.</p>
+    </footer>
+
+    
+  </body>
 
 </html>
