--- a/visual.html
+++ b/visual.html
@@ -11,53 +11,68 @@
 
   <body>
 
-    <div>
-    <h1>
-      <a href="index.html">Ashley Sagar</a></h1>
-    </div>
-
-    <section>
-    <div><a href="audio.html">audio</a></div>
-    <div><a href="cv.html">cv</a></div>
-    <div><a href="bio.html">bio</a></div>
-    <div><a href="contact_form.html">booking</a></div>
-</section>
-
-    
-   <div><h2>visual</h2></div>
+    <header>
+      <div>
+	<h1>
+	  <a href="index.html">Ashley Sagar</a></h1>
+      </div>
 
 
-   <section>
-   <!-- VGA SYNTH  -->
-   <div><h3>A Hacked VGA Signal Generator</h3></div>
-   <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1144476533?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A  Hacked VGA Signal Generator"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+      <!-- menu links -->
+      <section>
+	<div><a href="audio.html">audio</a></div>
+	<div><a href="cv.html">cv</a></div>
+	<div><a href="bio.html">bio</a></div>
+	<div><a href="contact_form.html">booking</a></div>
+      </section>
+    </header>
 
 
-   <!-- It's all fun and games until you realise you're working for free -->
-
-   <div><h3>It's all fun and games until you realise you're working for free</h3></div>
-   <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1007423017?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="It's all fun and games until you realise you're working for free"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-
-
-   <!-- Seletections from a Pen-Plotter -->
-   <div>
-     <h3>Seletections from a Pen-Plotter</h3>
-     <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/907177036?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Seletections from a Pen-Plotter"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-     </div>
+    <main>
+      
+      <div><h2>visual</h2></div>
 
 
+      <section>
+	<!-- VGA SYNTH  -->
+	<div><h3>A Hacked VGA Signal Generator</h3></div>
+	<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1144476533?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A  Hacked VGA Signal Generator"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-   <!-- An Ambient Washing -->
-   <div>
-     <h3>An Ambient Washing</h3>
-   <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/825773213?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="TheoryProjectVideoDocumentation - HD 1080p"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
-   </section>
-    </body>
+	<!-- It's all fun and games until you realise you're working for free -->
+
+	<div><h3>It's all fun and games until you realise you're working for free</h3></div>
+	<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1007423017?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="It's all fun and games until you realise you're working for free"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+
+	<!-- Seletections from a Pen-Plotter -->
+	<div>
+	  <h3>Seletections from a Pen-Plotter</h3>
+	  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/907177036?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Seletections from a Pen-Plotter"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	</div>
+
+
+
+	<!-- An Ambient Washing -->
+	<div>
+	  <h3>An Ambient Washing</h3>
+	  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/825773213?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="TheoryProjectVideoDocumentation - HD 1080p"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+
+      </section>
+
+    </main>
+
+
+    <footer>
+      <p>©2025 green.road.studios. All rights reserved.</p>
+    </footer>
+
+
+  </body>
 
 
   
   
 
 
-  </html>
+</html>
