cleaning and tidying

--- a/audio.html
+++ b/audio.html
@@ -18,7 +18,7 @@
     <header>
       <div>
 	<h1>
-	  <a href="index.html">Ashley Sagar</a></h1>
+	  <a href="index.html">ashley sagar</a></h1>
       </div>
 
       <!-- menu links -->
@@ -55,70 +55,69 @@
 	    <a href="https://ashleysagar.bandcamp.com/" target="_blank">Ashley Sagar</a>
 	  </p>
 	</div>
-      </section>
 
-      <section>      
+
 	<div>
 	  <!-- Orlando Ferguson Bandcamp -->
 	  <p>
 	    <a href="https://orlandoferguson.bandcamp.com/" target="_blank">Orlando Ferguson</a>
 	  </p>
 	</div>
-      </section>
 
-      <section>
+
+
 	<div>
 	  <!-- TWSGB Bandcamp-->
 	  <p>
 	    <a href="https://thewharfstreetgalaxyband.bandcamp.com/" target="_blank">The Wharf Street Galaxy Band</a>
 	  </p>
 	</div>
-      </section>	
 
-      <section>
+
+
 	<div>
 	  <!-- Neuschlaufen Bandcamp -->
 	  <p>
 	    <a href="https://nschlfn.bandcamp.com/" target="_blank">neushlaufen</a>
 	  </p>
 	</div>
-      </section>
 
-      <section>
+
+
 	<div>
 	  <!-- Gallas Ayers Bandcamp -->
 	  <p>
 	    <a href="https://gallasayers.bandcamp.com/" target="_blank">Gallas Ayers</a>
 	  </p>
 	</div>
-      </section>
 
-      <section>
+
+
 	<div>
 	  <!-- Sebastian Oldsmith -->
 	  <p>
 	    <a href="https://wonkystuff.bandcamp.com/album/make-it-rain" target="_blank">Sebastian Oldsmith</a>
 	  </p>
 	</div>
-      </section>
 
-      <section>
+
+
 	<div>
 	  <!-- Polynomial -->
 	  <p>
 	    <a href="https://ojudrecords.bandcamp.com/album/polynomial-live-at-kirkstall-festival-july-2018" target="_blank">Polynomial</a>
 	  </p>
 	</div>
-      </section>
 
-      <section>
+
+
 	<div>
 	  <!-- Deep Image -->
 	  <p>
 	    <a href="https://soundcloud.com/deepimagemusic" target="_blank">Deep Image Music</a>
 	  </p>
 	</div>
-      </section>
+
 
       <section>
 	<div>
@@ -127,9 +126,9 @@
 	    <a href="https://wonkystuff.bandcamp.com/" target="_blank">WonkyStuff</a>
 	  </p>
 	</div>
-      </section>
 
-      <section>
+
+
 	<div>
 	  <!-- Section_9 -->
 	  <p>
