--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
 
     <header>
-    <div><h1><a href="index.html">Ashley Sagar</a></h1></div>
+    <div><h1><a href="index.html">ashley sagar</a></h1></div>
 
 
     <!-- ///////////////////////////////////////////////////// -->
     <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
 
-    <section>
+    <section class=menu>
       <div><a href="audio.html">audio</a></div>
       <div><a href="visual.html">visual</a></div>
       <div><a href="cv.html">cv</a></div>
