--- a/visual.html
+++ b/visual.html
@@ -14,7 +14,7 @@
     <header>
       <div>
 	<h1>
-	  <a href="index.html">Ashley Sagar</a></h1>
+	  <a href="index.html">ashley sagar</a></h1>
       </div>
 
 
