--- a/contact_form.html
+++ b/contact_form.html
@@ -11,17 +11,21 @@
   <body>
 
     <header>
-      <div><h1><a href="index.html">ashley sagar</a></h1></div>
+      <div class="my-name"><h1><a href="index.html">ashley sagar</a></h1></div>
 
 
       <!-- ///////////////////////////////////////////////////// -->
       <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
       <section>
-	<div><a href="audio.html">audio</a></div>
-	<div><a href="visual.html">visual</a></div>
-	<div><a href="cv.html">cv</a></div>
-	<div><a href="bio.html">bio</a></div>
+	<nav class="primary-navigation" aria-label="Primary Navigation">
+	  <ul>
+	    <li><a href="audio.html">audio</a></li>
+	    <li><a href="visual.html">visual</a></li>
+	    <li><a href="cv.html">cv</a></li>
+	    <li><a href="bio.html">bio</a></li>
+	  </ul>
+	</nav>
       </section>
 
     </header>
@@ -32,11 +36,12 @@
       
       <div><h2>booking</h2></div>
 
+
       <section>
-      <div><p>green(dot)road(dot)studios(at)gmail(dot)com</p></div>
+	<div><p>green(dot)road(dot)studios(at)gmail(dot)com</p></div>
       </section>
 
-      
+
     </main>
 
 
