--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
 
 
     <header>
-    <div><h1><a href="index.html">ashley sagar</a></h1></div>
+      <div class="my-name"><h1><a href="index.html">ashley sagar</a></h1></div>
 
 
-    <!-- ///////////////////////////////////////////////////// -->
-    <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
+      <!-- ///////////////////////////////////////////////////// -->
+      <!-- /////////////////LINKS TO OTHER PAGES////////////////// -->
 
 
-    <section class=menu>
-      <div><a href="audio.html">audio</a></div>
-      <div><a href="visual.html">visual</a></div>
-      <div><a href="cv.html">cv</a></div>
-      <div><a href="bio.html">bio</a></div>
-      <div><a href="contact_form.html">booking</a></div>
-
-    </section>
+      <section>
+	<nav class="primary-navigation" aria-label="Primary Navigation">
+	  <ul>
+	    <li><a href="audio.html">audio</a></li>
+	    <li><a href="visual.html">visual</a></li>
+	    <li><a href="cv.html">cv</a></li>
+	    <li><a href="bio.html">bio</a></li>
+	    <li><a href="contact_form.html">booking</a></li>
+	  </ul>
+	</nav>
+      </section>
 
     </header>
 
