--- a/visual.html
+++ b/visual.html
@@ -12,7 +12,7 @@
   <body>
 
     <header>
-      <div>
+      <div class="my-name">
 	<h1>
 	  <a href="index.html">ashley sagar</a></h1>
       </div>
@@ -20,10 +20,15 @@
 
       <!-- menu links -->
       <section>
-	<div><a href="audio.html">audio</a></div>
-	<div><a href="cv.html">cv</a></div>
-	<div><a href="bio.html">bio</a></div>
-	<div><a href="contact_form.html">booking</a></div>
+	<nav class="primary-navigation" aria-label="Primary Navigation">
+	  <ul>
+	    <li><a href="audio.html">audio</a></li>
+	    <li><a href="cv.html">cv</a></li>
+	    <li><a href="bio.html">bio</a></li>
+	    <li><a href="contact_form.html">booking</a></li>
+	  </ul>
+	</nav>
+	
       </section>
     </header>
 
@@ -34,29 +39,30 @@
 
 
       <section>
+	  <ul>
 	<!-- VGA SYNTH  -->
 	<div><h3>A Hacked VGA Signal Generator</h3></div>
-	<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1144476533?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A  Hacked VGA Signal Generator"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	<div><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1144476533?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="A  Hacked VGA Signal Generator"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></div>
 
 
 	<!-- It's all fun and games until you realise you're working for free -->
 
 	<div><h3>It's all fun and games until you realise you're working for free</h3></div>
-	<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1007423017?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="It's all fun and games until you realise you're working for free"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	<div><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/1007423017?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="It's all fun and games until you realise you're working for free"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></div>
 
 
 	<!-- Seletections from a Pen-Plotter -->
 	<div>
-	  <h3>Seletections from a Pen-Plotter</h3>
-	  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/907177036?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Seletections from a Pen-Plotter"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	    <h3>Seletections from a Pen-Plotter</h3></div>
+	 <div><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/907177036?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Seletections from a Pen-Plotter"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 	</div>
 
 
 
 	<!-- An Ambient Washing -->
 	<div>
-	  <h3>An Ambient Washing</h3>
-	  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/825773213?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="TheoryProjectVideoDocumentation - HD 1080p"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	  <h3>An Ambient Washing</h3></div>
+	  <div><div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/825773213?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;muted=1" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media; web-share" referrerpolicy="strict-origin-when-cross-origin" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="TheoryProjectVideoDocumentation - HD 1080p"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script></div>
 
       </section>
 
