--- a/audio.html
+++ b/audio.html
@@ -35,7 +35,7 @@
 
     <main>
       
-      <div><h2>audio</h2></div>
+      <div><h2>audio projects</h2></div>
 
       <!-- a list of links to audio I made -->
 
