--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="A website containing things that I do and have made.">
     <!--  <meta name="viewport" content="width=device-width, inital-scale=1.0">
       -->
+    <meta name="google-site-verification" content="4sjI4XNNJ09pXMSwHYKdBQppX9nM6b0xUSqm7fw5Cts" />
     <link rel="stylesheet" href="css/style.css">
   </head>
 
