setting viewport for devices

--- a/audio.html
+++ b/audio.html
@@ -7,6 +7,9 @@
     
     <meta name="author" content="ashley sagar">
     <meta name="description" content="A website containing things that I do and have made.">
+    <!-- set viewport for devices -->
+    <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
+
     <link href="css/style.css" rel="stylesheet" >
   </head>
 
