--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8">
     <title>cv</title>
+    <!-- set viewport for devices -->
+    <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
+
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -97,16 +100,16 @@
 	<div>
       	  <ul>
 	    <li>
-	      <h3>Goldsmiths University</h3>
-	      <p>2022-2026 MFA Computational Arts</p>
+	      <strong>Goldsmiths University</strong><br>
+	      <p class="edu-list-type">2022-2026 MFA Computational Arts</p>
 	    </li>
 	    <li>
-	      <h3>York St. John University</h3>
-	      <p>2010-2013 BA Joint Honors Fine Art and Music</p>
+	      <strong>York St. John University</strong><br>
+	      <p class="edu-list-type">2010-2013 BA Joint Honors Fine Art and Music</p>
 	    </li>
 	    <li>
-	      <h3>Leeds College of Art and Design</h3>
-	      <p>2008-2010 Foundation in Art and Design</p>
+	      <strong>Leeds College of Art and Design</strong><br>
+	      <p class="edu-list-type">2008-2010 Foundation in Art and Design</p>
 	    </li>
 	  </ul>
 	</div>
@@ -115,7 +118,7 @@
     </main>
 
     <footer>
-      <p>©2025 green.road.studios. All rights reserved.</p>
+      <p>©2025 <a href="https://www.greenroadstudios.co.uk/" target="_blank">green.road.studios. All rights reserved.</p>
     </footer>
 
 
