--- a/contact_form.html
+++ b/contact_form.html
@@ -5,6 +5,9 @@
     <title>booking</title>
     <meta name="author" content="ashley sagar">
     <meta name="description" content="A website containing things that I do and have made.">
+<!-- set viewport for devices -->
+    <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
+
     <link rel="stylesheet" href="css/style.css">
 
   </head>
