cleaned up footer and added css

--- a/contact_form.html
+++ b/contact_form.html
@@ -5,7 +5,7 @@
     <title>booking</title>
     <meta name="author" content="ashley sagar">
     <meta name="description" content="A website containing things that I do and have made.">
-<!-- set viewport for devices -->
+    <!-- set viewport for devices -->
     <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
 
     <link rel="stylesheet" href="css/style.css">
@@ -48,10 +48,14 @@
     </main>
 
 
-
     <footer>
-      <p>©2025 green.road.studios. All rights reserved.</p>
+      <div class="footer-link">
+	<p>©2026 design by <a href="https://www.greenroadstudios.co.uk/" target="_blank" >green road studios.</a> All rights reserved.</p>
+      </div>
+
+      
     </footer>
+
 
   </body>
 </html>
