cleaning up description

--- a/contact_form.html
+++ b/contact_form.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <title>booking</title>
     <meta name="author" content="ashley sagar">
-    <meta name="description" content="A website containing things that I do and have made.">
-    <!-- set viewport for devices -->
+     !-- set viewport for devices -->
     <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
 
     <link rel="stylesheet" href="css/style.css">
