--- a/contact_form.html
+++ b/contact_form.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>booking</title>
     <meta name="author" content="ashley sagar">
-     !-- set viewport for devices -->
+    <!-- set viewport for devices -->
     <meta name="viewport" content="width=device-width, inital-scale=1.0"> 
 
     <link rel="stylesheet" href="css/style.css">
